# pygame-base

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile
app/: main.py
app/modules/api/: util.py
assets/sprites/: generate_player_sprite.py
docs/: conf.py  contributing.rst  index.rst  installation.rst
docs/_build/doctrees/: app.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree
docs/_build/doctrees/source/: app.doctree  modules.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  app.html  contributing.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/app/: main.html
docs/_build/html/_sources/: contributing.rst.txt  index.rst.txt  installation.rst.txt
docs/_build/html/source/: app.html  modules.html
tests/: test_main.py
