[tool.poetry]
name = "pygame-base"
version = "0.1.0"
description = "Docker base for Python code"
authors = ["SchwartzKamel"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^8.1.3"
httpx = "^0.28.1"
pygame = "^2.6.1"
numpy = "^2.3.2"
pytest = "^8.4.1"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
pytest = "^8.4.1"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
\.hg
\.mypy_cache
\.tox
\.venv
_build
buck-out
build
dist
)/
'''
